--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -882,3 +882,9 @@
 	    margin-left: auto;
 	    margin-right: auto;
 	}
+
+    section#main footer {
+	    max-width: 80%;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
